# AI-Marksheet-Extraction-API

./: .gitignore  .replit  APPROACH.md  README.md  main.py  pyproject.toml  replit.md
attached_assets/: AI Engineer Candidate Task_1756309615801.docx  Pasted-You-are-tasked-with-completing-a-software-development-project-that-will-be-evaluated-based-on-your-G-1756309652292_1756309652292.txt
models/: schemas.py
services/: file_service.py  llm_service.py  ocr_service.py
static/: index.html  script.js  style.css
tests/: test_api.py
utils/: confidence_calculator.py
